Fix linux test